fix wordwrap on mobile + a few tweaks

--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ h1, h2, h3, h4 {
   font-weight: 300;
 }
 
-// Site Header
+// Site Header -----------------------------------------------------------------
 
 @mixin rb-logo {
   &::before {
@@ -108,6 +108,8 @@ h1, h2, h3, h4 {
   float: right;
 }
 
+// Home splash -----------------------------------------------------------------
+
 #home-splash {
   background: $primary url('assets/images/home-splash.jpg') top center repeat;
   // clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
@@ -124,10 +126,11 @@ h1, h2, h3, h4 {
     text-align: center;
   }
   h1 {
-    font-size: 4.5em;
+    font-size: 60px;
     margin-bottom: 15px;
   }
   h2 {
+    font-size: 24px;
     margin-bottom: 80px;
   }
 }
@@ -135,6 +138,25 @@ h1, h2, h3, h4 {
     max-width:200px;
     margin: 60px auto 20px auto;
   }
+
+@media (min-width: 768px) {
+  #home-splash {
+    h1 { font-size: 72px; }
+    h2 { font-size: 32px; }
+  }
+}
+// Product display (loop) ------------------------------------------------------
+
+ul.products li.product {
+  // h3 {
+  //   display: inline;
+  //   clear: none;
+  // }
+  .price {
+    // display: inline;
+    font-weight: 600;
+  }
+}
 
 // Footer ----------------------------------------------------------------------
 
@@ -178,6 +200,7 @@ h1, h2, h3, h4 {
 
 .footer-logo {
   @include rb-logo;
+  font-size: 23px;
   text-transform: uppercase;
   .site-footer & {
     color: #fff;
